<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:background="@drawable/bg"
tools:context="com.example.timmy.myapplication.MainActivity">

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnStart"
        android:onClick="onClickBtnStartGame"
        android:text="@string/main_menu_fun_game" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnQL"
        android:onClick="onClickBtnStart"
        android:text="@string/main_menu_knowledge_challenge" />

    <Button
        android:id="@+id/btnQL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnGL"
        android:onClick="onClickBtnQL"
        android:text="@string/main_menu_show_qlog" />

    <Button
        android:id="@+id/btnGL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnGR"
        android:onClick="onClickBtnGL"
        android:text="@string/main_menu_show_glog" />

    <Button
        android:id="@+id/btnGR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="onClickBtnGR"
        android:text="@string/main_menu_show_gResult" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:text="@string/title_activity_main"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold|italic" />
</RelativeLayout>
